dist/1.0/bin/sample/retrieveUnpackaged/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account related to the Contract</description>
        <inlineHelpText>Billing Account related to the Contract</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address2__c</fullName>
        <label>Registration Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contracts (Billing Address)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Apartment_No__c</fullName>
        <label>Registration Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Building_Block__c</fullName>
        <label>Registration Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Registration City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Registration Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Registration Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Customer_Name__c</fullName>
        <label>Registration Customer Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Floor__c</fullName>
        <label>Registration Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Registration Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Postal__c</fullName>
        <label>Registration Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Room_No__c</fullName>
        <label>Registration Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Registration State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <label>Registration Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <label>Registration Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_No__c</fullName>
        <label>Registration Street No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binding_Period__c</fullName>
        <label>Binding Period</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactPerson__c</fullName>
        <description>Account&apos;s Contact Person responsible for this Contract</description>
        <inlineHelpText>Account&apos;s Contact Person responsible for this Contract</inlineHelpText>
        <label>Representing Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_contract_number__c</fullName>
        <label>Local contract number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Relation to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <description>Relation to Parent Contract</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position of a person representing the customer</description>
        <inlineHelpText>Position of a person representing the customer</inlineHelpText>
        <label>Position</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Special_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Special Terms will be printed on Contract</description>
        <inlineHelpText>If checked, Special Terms will be printed on Contract</inlineHelpText>
        <label>Print Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Opportunity__c</fullName>
        <description>Relation to Regional Opportunity</description>
        <label>Regional Opportunity</label>
        <referenceTo>Regional_Opportunity__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Relation to Request</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Relation to Installed Product</description>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address2__c</fullName>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Contracts (Shipping Address)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Apartment_No__c</fullName>
        <label>Invoicing Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Building_Block__c</fullName>
        <label>Invoicing Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Invoicing City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <label>Invoicing Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Invoicing Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Customer_Name__c</fullName>
        <label>Invoicing Customer Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Floor__c</fullName>
        <label>Invoicing Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <label>Invoicing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal__c</fullName>
        <label>Invoicing Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Room_No__c</fullName>
        <label>Invoicing Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Invoicing State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <label>Invoicing Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <label>Invoicing Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_No__c</fullName>
        <label>Invoicing Street No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
</CustomObject>